<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signupsignin.ForgetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_back_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/back_icon"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="56dp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_asking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imv_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/asking_forget_password"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_enter_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_asking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/enter_email"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/edit_text_background"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:hint="Email"
            android:paddingLeft="48dp"
            android:paddingBottom="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:inputType="textEmailAddress"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="@id/edt_email"
            app:layout_constraintBottom_toBottomOf="@id/edt_email"
            app:layout_constraintLeft_toLeftOf="@id/edt_email"
            android:src="@drawable/email_icon"
            android:layout_marginLeft="8dp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_code_error"
            android:textSize="16sp"
            android:textColor="@color/red"
            app:layout_constraintTop_toBottomOf="@id/edt_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:visibility="gone"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@id/tv_error"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="Lấy mã xác nhận"
            android:textColor="@color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>