<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signupsignin.SignInFragment"
    android:background="@color/white"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="40dp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imv_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/hello_sign_in"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_hope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_hello"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/hope_sign_in"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_marginTop="16dp"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_hope"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/edit_text_background"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:hint="Email"
            android:paddingLeft="48dp"
            android:paddingBottom="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:inputType="textEmailAddress"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="@id/edt_email"
            app:layout_constraintBottom_toBottomOf="@id/edt_email"
            app:layout_constraintLeft_toLeftOf="@id/edt_email"
            android:src="@drawable/email_icon"
            android:layout_marginLeft="8dp"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edt_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/edit_text_background"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:hint="Mật khẩu"
            android:paddingLeft="48dp"
            android:paddingBottom="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:inputType="textPassword"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="@id/edt_password"
            app:layout_constraintBottom_toBottomOf="@id/edt_password"
            app:layout_constraintLeft_toLeftOf="@id/edt_password"
            android:src="@drawable/lock_icon"
            android:layout_marginLeft="8dp"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_view_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintTop_toTopOf="@id/edt_password"
            app:layout_constraintBottom_toBottomOf="@id/edt_password"
            app:layout_constraintRight_toRightOf="@id/edt_password"
            android:src="@drawable/eye_close"
            android:layout_marginEnd="8dp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_error"
            android:textSize="16sp"
            android:textColor="@color/red"
            app:layout_constraintTop_toBottomOf="@id/edt_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:visibility="gone"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@id/tv_error"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="Đăng nhập"
            android:textColor="@color/white"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quên mật khẩu?"
            android:textColor="@color/blue_medium"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_no_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="Bạn chưa có tài khoản?"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="64dp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng ký ngay"
            android:textSize="16sp"
            android:textColor="@color/blue_medium"
            app:layout_constraintTop_toTopOf="@id/tv_no_have_acc"
            app:layout_constraintBottom_toBottomOf="@id/tv_no_have_acc"
            app:layout_constraintLeft_toRightOf="@id/tv_no_have_acc"
            android:layout_marginLeft="8dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>